@@ -1,7 +1,7 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
-Version: 1.0.4.2
-Date: 2020-03-17
+Version: 1.0.4.3
+Date: 2020-03-18
 Author: Dirk Eddelbuettel, Romain Francois, JJ Allaire, Kevin Ushey, Qiang Kou,
  Nathan Russell, Douglas Bates and John Chambers
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
@@ -14,7 +14,6 @@ Description: The 'Rcpp' package provides R functions as well as C++ classes whic
  Francois (2011, <doi:10.18637/jss.v040.i08>), the book by Eddelbuettel (2013,
  <doi:10.1007/978-1-4614-6868-4>) and the paper by Eddelbuettel and Balamuta (2018,
  <doi:10.1080/00031305.2017.1375990>); see 'citation("Rcpp")' for details.
-Depends: R (>= 3.0.0)
 Imports: methods, utils
 Suggests: tinytest, inline, rbenchmark, pkgKitten (>= 0.1.2)
 URL: http://www.rcpp.org, http://dirk.eddelbuettel.com/code/rcpp.html, https://github.com/RcppCore/Rcpp
