@@ -30,7 +30,7 @@
 #define RCPP_VERSION_STRING     "1.0.4"
 
 // the current source snapshot
-#define RCPP_DEV_VERSION        RcppDevVersion(1,0,4,2)
-#define RCPP_DEV_VERSION_STRING "1.0.4.2"
+#define RCPP_DEV_VERSION        RcppDevVersion(1,0,4,3)
+#define RCPP_DEV_VERSION_STRING "1.0.4.3"
 
 #endif
